# ZephyrNucleo

./: .gitignore  .gitmodules  CMakeLists.txt  requirements.txt
source/: main.cpp
